k8s/apps/paperless-ngx/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  type: ClusterIP
  selector:
    app: paperless-ngx
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
