k8s/apps/paperless-ngx/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    tailscale.com/proxy-group: ingress-proxies
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: paperless-ngx
      port:
        number: 8000
  tls:
    - hosts:
        - paperless
